package com.eventsystem.domain.purchaserecord;

public record BuyerSnapshot(String displayName) {}